--- a/client/.env.production
+++ b/client/.env.production
@@ -1,1 +1,1 @@
-REACT_APP_SERVER_API:https://marvel-comic-gallery.herokuapp.com
+REACT_APP_SERVER_API:https://marvel-comic-gallery.herokuapp.com/api
